tests/k8s_testcases/example_policies/testcase3/testcase3-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - testcase3-networkpolicy1.yaml
    expectedWarnings: 0

  - name: np2
    networkPolicyList:
      - testcase3-networkpolicy2.yaml
    expectedWarnings: 0

queries:
  - name: connectivity_map
    connectivityMap:
    - np1
    - np2
    expected: 0
    outputConfiguration:
      outputFormat: txt
      fwRulesRunInTestMode: false

  - name: not_vacuous
    vacuity:
      - np1
      - np2
    expected: 0

  - name: twoWayContainment_np1_and_np2
    twoWayContainment:
      - np1
      - np2
    expected: 1

  - name: redundancy_np1_and_np2
    redundancy:
      - np1
      - np2
    expected: 0
  - name: pairwiseInterferes_np1_and_np2
    pairwiseInterferes:
      - np1
      - np2
    expected: 1
  - name: emptiness
    emptiness:
      - np1
      - np2
    expected: 0
